# quant-rust

./: docker-compose.yml
back-end/: Cargo.toml  Rocket.toml  build.rs  build.sh  dockerfile
back-end/migrations/20240807_creat_posts/: up.sql
back-end/migrations/20240808_creat_stock_info/: down.sql  up.sql
back-end/migrations/20240815_create_stock_rps/: down.sql  up.sql
back-end/migrations/20240816_create_stock_daily_info/: down.sql  up.sql
back-end/python_method/: GetStockDataApi.py
back-end/src/: diesel_mysql.rs  lib.rs  main.rs
back-end/src/db/: connection.rs  mod.rs  schema.rs  stock_info.rs
back-end/src/lib/: get_all_stock_list.rs  mod.rs
back-end/src/py_tools/: GetStockDataApi.py
back-end/src/routes/: stock.rs
back-end/src/stock_lib/: get_all_stock_list.rs  get_stock_rps_list.rs  mod.rs  stock_trade.rs
front-end/: .env  .env.prod  .gitignore  build.sh  dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
front-end/src/: App.vue  main.js
front-end/src/components/: Card.vue
front-end/src/router/: index.js
front-end/src/utils/: request.js
front-end/src/views/home/: api.js  index.vue
front-end/src/views/stock_basic/: api.js  index.vue
front-end/src/views/stock_select/: api.js  index.vue
front-end/src/views/stock_select/components/: StockCard.vue
front-end/src/views/stock_simulate/: api.js  index.vue
front-end/src/views/stock_simulate/components/: StockAssets.vue  StockBacktestChart.vue  StockProfit.vue
front-end/src/views/wasm_life_game/: index.vue
front-end/wasm_life_game/: Cargo.toml
front-end/wasm_life_game/src/: lib.rs
front-end/wasm_life_game/tests/: web.rs
