[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"  # 添加这个依赖
diesel = "2.0.0"
diesel_migrations = "2.1.0"
chrono = "0.4" # 时间库
ndarray = "0.16.1" # 线性代数等数学工具库
rayon = "1.5.1" # rayon库提供了并行迭代器，可以自动将数据分割成多个块，并在多个线程上并行处理这些块。
ta = "0.5.0" # Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc.
rand = "0.8.5" # 用于生成随机数
reqwest = { version = "0.12.7", features = ["json"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]